--- a/public/index.html
+++ b/public/index.html
@@ -11,7 +11,7 @@
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
     <link rel="stylesheet" href="output.css" />
 
-    <title>React App</title>
+    <title>Cuisines</title>
   </head>
   <body>
     <div id="root"></div>
